Entity link and topical entity integration tests, for a total of 228 tests. Add spreadsheet detailing testing strategy. Various code cleanups.