@@ -34,17 +34,23 @@ import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
 import org.junit.jupiter.api.condition.EnabledIf;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import com.graphql_java_generator.exception.GraphQLRequestExecutionException;
 import com.graphql_java_generator.exception.GraphQLRequestPreparationException;
 
-@SpringBootTest(classes = GraphQLClientMain.class)
-@TestMethodOrder(OrderAnnotation.class)
-class PersonTests extends TopicalEntityTests<Person> {
+import io.github.demonfiddler.ee.client.util.QueryExecutor;
+import io.github.demonfiddler.ee.client.util.SpringContext;
 
-	private static Person EXPECTED;
-	private static List<Person> PERSONS;
+@SpringBootTest(classes = GraphQLClientMain.class)
+@Order(4)
+@TestMethodOrder(OrderAnnotation.class)
+class PersonTests extends AbstractTopicalEntityTests<Person> {
+
+	private static final Logger LOGGER = LoggerFactory.getLogger(PersonTests.class);
+
 	private static final String RESPONSE_SPEC = //
 		"""
 		{
@@ -112,14 +118,13 @@ class PersonTests extends TopicalEntityTests<Person> {
 			firstName
 			lastName
 			alias
+			qualifications
 			notes
 		}
 		""";
-	private static final String PAGED_RESPONSE_SPEC = //
+	static final String PAGED_RESPONSE_SPEC = //
 		"""
 		{
-			hasContent
-			isEmpty
 			number
 			size
 			numberOfElements
@@ -129,29 +134,49 @@ class PersonTests extends TopicalEntityTests<Person> {
 			isLast
 			hasNext
 			hasPrevious
+			isEmpty
+			hasContent
 			content {
 				id
 				status%s
 				firstName
 				lastName
 				alias
+				qualifications
 				notes
 			}
 		}
 		""";
 
+	static Person person;
+	static List<Person> persons;
+
 	static boolean hasExpectedPerson() {
-		return EXPECTED != null;
+		return person != null;
 	}
 
 	static boolean hasExpectedPersons() {
-		return PERSONS != null;
+		return persons != null;
 	}	
+
+	static void ensureExpectedPersons() throws GraphQLRequestPreparationException, GraphQLRequestExecutionException {
+		if (persons == null) {
+			QueryExecutor queryExecutor = SpringContext.getApplicationContext().getBean(QueryExecutor.class);
+			String responseSpec = PAGED_RESPONSE_SPEC.formatted("");
+			List<Person> content = queryExecutor.persons(responseSpec, null, null).getContent();
+			if (content.isEmpty()) {
+				LOGGER.error("Failed to initialise persons list from server");
+			} else {
+				persons = content;
+				LOGGER.debug("Initialised persons list from server");
+			}
+		}
+	}
 
 	@Test
 	@Order(1)
 	void createPerson() throws GraphQLRequestPreparationException, GraphQLRequestExecutionException {
-		EXPECTED = null;
+		person = null;
 
 		PersonInput input = PersonInput.builder() //
 			.withTitle("Mr") //
@@ -171,37 +196,35 @@ class PersonTests extends TopicalEntityTests<Person> {
 		OffsetDateTime earliestUpdated = OffsetDateTime.now();
 		Person actual = mutationExecutor.createPerson(RESPONSE_SPEC, input);
 
-		// Check the returned Person object for correctness.
 		LOG_DATES[0] = actual.getCreated();
-		checkPerson(actual, StatusKind.DRA.getLabel(), earliestUpdated, null, input.getTitle(), input.getFirstName(),
+		checkPerson(actual, StatusKind.DRA.label(), earliestUpdated, null, input.getTitle(), input.getFirstName(),
 			input.getNickname(), input.getPrefix(), input.getLastName(), input.getSuffix(), input.getAlias(),
 			input.getNotes(), input.getQualifications(), "United Kingdom", input.getRating(), input.getChecked(),
 			input.getPublished(), CRE);
 
-		// Test passed, so remember result for following tests.
-		EXPECTED = actual;
+		person = actual;
 	}
 
 	@Test
 	@Order(2)
 	@EnabledIf("io.github.demonfiddler.ee.client.PersonTests#hasExpectedPerson")
 	void readPerson() throws GraphQLRequestPreparationException, GraphQLRequestExecutionException {
-		Person expected = EXPECTED;
-		EXPECTED = null;
+		Person expected = person;
+		person = null;
 
 		Person actual = queryExecutor.personById(RESPONSE_SPEC, expected.getId());
 
-		// Check read person against the one created by the preceding createPerson() test.
 		checkPerson(actual, expected, CRE);
-		EXPECTED = actual;
+
+		person = actual;
 	}
 
 	@Test
 	@Order(3)
 	@EnabledIf("io.github.demonfiddler.ee.client.PersonTests#hasExpectedPerson")
 	void updatePerson() throws GraphQLRequestPreparationException, GraphQLRequestExecutionException {
-		Person expected = EXPECTED;
-		EXPECTED = null;
+		Person expected = person;
+		person = null;
 
 		PersonInput input = PersonInput.builder() //
 			.withId(expected.getId()) //
@@ -229,27 +252,27 @@ class PersonTests extends TopicalEntityTests<Person> {
 			input.getAlias(), input.getNotes(), input.getQualifications(), "United States of America",
 			input.getRating(), input.getChecked(), input.getPublished(), CRE, UPD);
 
-		EXPECTED = actual;
+		person = actual;
 	}
 
 	@Test
 	@Order(4)
 	@EnabledIf("io.github.demonfiddler.ee.client.PersonTests#hasExpectedPerson")
 	void deletePerson() throws GraphQLRequestPreparationException, GraphQLRequestExecutionException {
-		Person expected = EXPECTED;
-		EXPECTED = null;
+		Person expected = person;
+		person = null;
 
 		OffsetDateTime earliestUpdated = OffsetDateTime.now();
 		Person actual = mutationExecutor.deletePerson(RESPONSE_SPEC, expected.getId());
 
 		// Check read person against the one created by the preceding createPerson() test.
 		LOG_DATES[2] = actual.getUpdated();
-		checkPerson(actual, StatusKind.DEL.getLabel(), expected.getCreated(), earliestUpdated, expected.getTitle(),
+		checkPerson(actual, StatusKind.DEL.label(), expected.getCreated(), earliestUpdated, expected.getTitle(),
 			expected.getFirstName(), expected.getNickname(), expected.getPrefix(), expected.getLastName(),
 			expected.getSuffix(), expected.getAlias(), expected.getNotes(), expected.getQualifications(),
 			expected.getCountry(), expected.getRating(), expected.getChecked(), expected.getPublished(), CRE, UPD, DEL);
 
-		EXPECTED = actual;
+		person = actual;
 	}
 
 	@Test
@@ -261,27 +284,31 @@ class PersonTests extends TopicalEntityTests<Person> {
 		final int personCount = 8;
 		List<Person> persons = new ArrayList<>(personCount + 1);
 		Person person0 = new Person();
-		person0.setId(EXPECTED.getId());
-		person0.setStatus(EXPECTED.getStatus());
-		person0.setFirstName(EXPECTED.getFirstName());
-		person0.setLastName(EXPECTED.getLastName());
-		person0.setAlias(EXPECTED.getAlias());
-		person0.setNotes(EXPECTED.getNotes());
-		person0.set__typename(EXPECTED.get__typename());
+		person0.setId(person.getId());
+		person0.setStatus(person.getStatus());
+		person0.setFirstName(person.getFirstName());
+		person0.setLastName(person.getLastName());
+		person0.setAlias(person.getAlias());
+		person0.setQualifications(person.getQualifications());
+		person0.setNotes(person.getNotes());
+		person0.set__typename(person.get__typename());
 		persons.add(person0);
 		String[] firstNames = {"Heidi", "Gary", "Fiona", "Eric", "Desmond", "Charles", "Beth", "Alison"};
 		String[] lastNames = {"Andrews", "Bosworth", "Charlton", "Douglas", "Edwards", "Farquhar", "Gibson", "Heath"};
 		String[] aliases = {"Z", null, "X", null, "v", null, "t", null};
+		String[] numbers = {null, "one", "two", "three", "four", "five", "six", "seven", "eight"};
 		for (int i = 1; i <= personCount; i++) {
+			String qualifications = "Person " + numbers[i];
 			String notes = "Notes #" + i + (i > 4 ? " (filtered)" : "");
-			if (i % 2 == 0)
-				notes = notes.toUpperCase();
+			if (i % 2 != 0)
+				qualifications = qualifications.toUpperCase();
 			if (i % 3 == 0)
 				notes = null;
 			PersonInput input = PersonInput.builder() //
 				.withFirstName(firstNames[i-1]) //
 				.withLastName(lastNames[i-1]) //
 				.withAlias(aliases[i-1]) //
+				.withQualifications(qualifications) //
 				.withNotes(notes) //
 				.withRating(1) //
 				.withChecked(true) //
@@ -289,7 +316,8 @@ class PersonTests extends TopicalEntityTests<Person> {
 				.build();
 			persons.add(mutationExecutor.createPerson(responseSpec, input));
 		}
-		PERSONS = persons;
+
+		PersonTests.persons = persons;
 	}
 
 	@Test
@@ -299,7 +327,7 @@ class PersonTests extends TopicalEntityTests<Person> {
 		String responseSpec = PAGED_RESPONSE_SPEC.formatted("");
 		PersonPage actuals = queryExecutor.persons(responseSpec, null, null);
 
-		checkPage(actuals, PERSONS.size(), 1, PERSONS.size(), 0, false, false, true, true, PERSONS, true);
+		checkPage(actuals, persons.size(), 1, persons.size(), 0, false, false, true, true, persons, true);
 	}
 
 	@Test
@@ -311,7 +339,7 @@ class PersonTests extends TopicalEntityTests<Person> {
 			.withText("filtered") //
 			.build();
 
-		List<Person> expected = subList(PERSONS, 5, 7, 8);
+		List<Person> expected = subList(persons, 5, 7, 8);
 		PersonPage actuals = queryExecutor.persons(responseSpec, filter, null);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
@@ -321,7 +349,7 @@ class PersonTests extends TopicalEntityTests<Person> {
 
 		filter.setStatus(List.of(StatusKind.DEL));
 		filter.setText(null);
-		expected = subList(PERSONS, 0);
+		expected = subList(persons, 0);
 		actuals = queryExecutor.persons(responseSpec, filter, null);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 	}
@@ -331,28 +359,25 @@ class PersonTests extends TopicalEntityTests<Person> {
 	@EnabledIf("io.github.demonfiddler.ee.client.PersonTests#hasExpectedPersons")
 	void readPersonsSorted() throws GraphQLRequestPreparationException , GraphQLRequestExecutionException {
 		String responseSpec = PAGED_RESPONSE_SPEC.formatted("");
-		OrderInput lastNameOrder = OrderInput.builder() //
-			.withProperty("lastName") //
+		OrderInput order = OrderInput.builder() //
+			.withProperty("qualifications") //
 			.build();
-		OrderInput firstNameOrder = OrderInput.builder() //
-			.withProperty("firstName") //
-			.build();
-		List<OrderInput> orders = List.of(lastNameOrder, firstNameOrder);
+		List<OrderInput> orders = Collections.singletonList(order);
 		SortInput sort = SortInput.builder().withOrders(orders).build();
 		PageableInput pageSort = PageableInput.builder().withSort(sort).build();
 
-		// 1: Heidi Andrews (Z), 2: Gary Bosworth (null), 3: Fiona Charlton (X), 4: Eric Douglas (null),
-		// 5: Desmond Edwards (v), 6: Charles Farquhar (null), 7: Beth Gibson (t), 8: Alison Heath (null),
-		// 0: Joanne Smythe (Smutt)
-		List<Person> expected = subList(PERSONS, 1, 2, 3, 4, 5, 6, 7, 8, 0);
+		// "PERSON FIVE", "PERSON ONE", "PERSON SEVEN", "PERSON THREE", "Person eight", "Person four", "Person six",
+		// "Person two", "Updated test qualification"
+		// 5, 1, 7, 3, 8, 4, 6, 2, 0
+		List<Person> expected = subList(persons, 5, 1, 7, 3, 8, 4, 6, 2, 0);
 		PersonPage actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		lastNameOrder.setDirection(DirectionKind.ASC);
+		order.setDirection(DirectionKind.ASC);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		lastNameOrder.setDirection(DirectionKind.DESC);
+		order.setDirection(DirectionKind.DESC);
 		Collections.reverse(expected);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
@@ -363,33 +388,30 @@ class PersonTests extends TopicalEntityTests<Person> {
 	@EnabledIf("io.github.demonfiddler.ee.client.PersonTests#hasExpectedPersons")
 	void readPersonsSortedIgnoreCase() throws GraphQLRequestPreparationException , GraphQLRequestExecutionException {
 		String responseSpec = PAGED_RESPONSE_SPEC.formatted("");
-		OrderInput notesOrder = OrderInput.builder() //
-			.withProperty("notes") //
+		OrderInput order = OrderInput.builder() //
+			.withProperty("qualifications") //
 			.withIgnoreCase(true) //
 			.build();
-		OrderInput lastNameOrder = OrderInput.builder() //
-			.withProperty("lastName") //
-			.build();
-		List<OrderInput> orders = List.of(notesOrder, lastNameOrder);
+		List<OrderInput> orders = Collections.singletonList(order);
 		SortInput sort = SortInput.builder().withOrders(orders).build();
 		PageableInput pageSort = PageableInput.builder().withSort(sort).build();
 
-		// 3: Fiona Charlton (X) / null, 6: Charles Farquhar (null) / null, 1: Heidi Andrews (Z) / Notes #1,
-		// 2: Gary Bosworth (null) / NOTES #2, 4: Eric Douglas (null) / NOTES #4,
-		// 5: Desmond Edwards (v) / Notes #5 (filtered), 7: Beth Gibson (t) / Notes #7 (FILTERED),
-		// 8: Alison Heath (null) / NOTES #8 (FILTERED), 0: Joanne Smythe (Smutt) / Updated test notes,
-		// 3, 6, 1, 2, 4, 5, 7, 8, 0
-		List<Person> expected = subList(PERSONS, 3, 6, 1, 2, 4, 5, 7, 8, 0);
+		// "Person eight", "PERSON FIVE", "Person four", "PERSON ONE", "PERSON SEVEN", "Person six", "PERSON THREE",
+		// "Person two", "Updated test qualifications"
+		// 8, 5, 4, 1, 7, 6, 3, 2, 0
+		List<Person> expected = subList(persons, 8, 5, 4, 1, 7, 6, 3, 2, 0);
+
 		PersonPage actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		notesOrder.setDirection(DirectionKind.ASC);
+		order.setDirection(DirectionKind.ASC);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		notesOrder.setDirection(DirectionKind.DESC);
+		order.setDirection(DirectionKind.DESC);
+		// expected = subList(persons, 0, 8, 7, 5, 4, 2, 1, 3, 6);
+		Collections.reverse(expected);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		expected = subList(PERSONS, 0, 8, 7, 5, 4, 2, 1, 3, 6);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 	}
 
@@ -402,49 +424,46 @@ class PersonTests extends TopicalEntityTests<Person> {
 			.withProperty("notes") //
 			.withNullHandling(NullHandlingKind.NULLS_FIRST) //
 			.build();
-		OrderInput lastNameOrder = OrderInput.builder() //
-			.withProperty("lastName") //
+		OrderInput qualificationsOrder = OrderInput.builder() //
+			.withProperty("qualifications") //
 			.build();
-		List<OrderInput> orders = List.of(notesOrder, lastNameOrder);
+		List<OrderInput> orders = List.of(notesOrder, qualificationsOrder);
 		SortInput sort = SortInput.builder().withOrders(orders).build();
 		PageableInput pageSort = PageableInput.builder().withSort(sort).build();
 
-		// 3: null / Fiona Charlton (X), 6: null / Charles Farquhar (null), 2: NOTES #2 / Gary Bosworth (null),
-		// 4: NOTES #4 / Eric Douglas (null), 8: NOTES #8 (FILTERED) / Alison Heath (null),
-		// 1: Notes #1 / Heidi Andrews (Z), 5: Notes #5 (filtered) / Desmond Edwards (v),
-		// 7: Notes #7 (filtered) / Beth Gibson (t), 0: Updated test notes / Joanne Smythe (Smutt)
-		// 3, 6, 2, 4, 8, 1, 5, 7, 0
-		List<Person> expected = subList(PERSONS, 3, 6, 2, 4, 8, 1, 5, 7, 0);
+		// null/"PERSON THREE", null/"Person six", "Notes #1"/"PERSON ONE", "Notes #2"/"Person two",
+		// "Notes #4"/"Person four", "Notes #5 (filtered)"/"PERSON FIVE", "Notes #7 (filtered)"/"PERSON SEVEN",
+		// "Notes #8 (filtered)"/"Person eight", "Updated test notes"/"Updated test qualifications"
+		// 3, 6, 1, 2, 4, 5, 7, 8, 0
+		List<Person> expected = subList(persons, 3, 6, 1, 2, 4, 5, 7, 8, 0);
 		PersonPage actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		lastNameOrder.setDirection(DirectionKind.ASC);
+		qualificationsOrder.setDirection(DirectionKind.ASC);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		lastNameOrder.setDirection(DirectionKind.DESC);
-		expected = subList(PERSONS, 6, 3, 2, 4, 8, 1, 5, 7, 0);
+		qualificationsOrder.setDirection(DirectionKind.DESC);
+		expected = subList(persons, 6, 3, 1, 2, 4, 5, 7, 8, 0);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		// 2: NOTES #2 / Gary Bosworth (null),
-		// 4: NOTES #4 / Eric Douglas (null), 8: NOTES #8 (FILTERED) / Alison Heath (null),
-		// 1: Notes #1 / Heidi Andrews (Z), 5: Notes #5 (filtered) / Desmond Edwards (v),
-		// 7: Notes #7 (filtered) / Beth Gibson (t), 0: Updated test notes / Joanne Smythe (Smutt),
-		// 3: null / Fiona Charlton (X), 6: null / Charles Farquhar (null)
-		// 2, 4, 8, 1, 5, 7, 0, 3, 6
+		// "Notes #1"/"PERSON ONE", "Notes #2"/"Person two", "Notes #4"/"Person four", "Notes #5 (filtered)"/"PERSON FIVE",
+		// "Notes #7 (filtered)"/"PERSON SEVEN", "Notes #8 (filtered)"/"Person eight",
+		// "Updated test notes"/"Updated test title", null/"PERSON THREE", null/"Person six",
+		// 1, 2, 4, 5, 7, 8, 0, 3, 6
 		notesOrder.setNullHandling(NullHandlingKind.NULLS_LAST);
-		lastNameOrder.setDirection(null);
-		expected = subList(PERSONS, 2, 4, 8, 1, 5, 7, 0, 3, 6);
+		qualificationsOrder.setDirection(null);
+		expected = subList(persons, 1, 2, 4, 5, 7, 8, 0, 3, 6);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		lastNameOrder.setDirection(DirectionKind.ASC);
+		qualificationsOrder.setDirection(DirectionKind.ASC);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		lastNameOrder.setDirection(DirectionKind.DESC);
-		expected = subList(PERSONS, 2, 4, 8, 1, 5, 7, 0, 6, 3);
+		qualificationsOrder.setDirection(DirectionKind.DESC);
+		expected = subList(persons, 1, 2, 4, 5, 7, 8, 0, 6, 3);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 	}
@@ -457,28 +476,24 @@ class PersonTests extends TopicalEntityTests<Person> {
 		TopicalEntityQueryFilter filter = TopicalEntityQueryFilter.builder() //
 			.withText("filtered") //
 			.build();
-		OrderInput notesOrder = OrderInput.builder() //
-			.withProperty("notes") //
+		OrderInput order = OrderInput.builder() //
+			.withProperty("qualifications") //
 			.build();
-		OrderInput lastNameOrder = OrderInput.builder() //
-			.withProperty("lastName") //
-			.build();
-		List<OrderInput> orders = List.of(notesOrder, lastNameOrder);
+		List<OrderInput> orders = Collections.singletonList(order);
 		SortInput sort = SortInput.builder().withOrders(orders).build();
 		PageableInput pageSort = PageableInput.builder().withSort(sort).build();
 
-		// 8: Alison Heath (null) / NOTES #8 (FILTERED), 5: Desmond Edwards (v) / Notes #5 (filtered),
-		// 7: Beth Gibson (t) / Notes #7 (FILTERED)
-		// 8, 5, 7
-		List<Person> expected = subList(PERSONS, 8, 5, 7);
+		// "PERSON FIVE", "PERSON SEVEN", "Person eight"
+		// 5, 7, 8
+		List<Person> expected = subList(persons, 5, 7, 8);
 		PersonPage actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		notesOrder.setDirection(DirectionKind.ASC);
+		order.setDirection(DirectionKind.ASC);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		notesOrder.setDirection(DirectionKind.DESC);
+		order.setDirection(DirectionKind.DESC);
 		Collections.reverse(expected);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
@@ -490,46 +505,47 @@ class PersonTests extends TopicalEntityTests<Person> {
 	void readPersonsFilteredSortedNullHandling() throws GraphQLRequestPreparationException , GraphQLRequestExecutionException {
 		String responseSpec = PAGED_RESPONSE_SPEC.formatted("");
 		TopicalEntityQueryFilter filter = TopicalEntityQueryFilter.builder() //
-			.withText("filtered") //
+			.withText("person") //
 			.build();
-		OrderInput aliasOrder = OrderInput.builder() //
-			.withProperty("alias") //
+		OrderInput notesOrder = OrderInput.builder() //
+			.withProperty("notes") //
 			.withNullHandling(NullHandlingKind.NULLS_FIRST) //
 			.build();
-		OrderInput lastNameOrder = OrderInput.builder() //
-			.withProperty("lastName") //
+		OrderInput qualificationsOrder = OrderInput.builder() //
+			.withProperty("qualifications") //
 			.build();
-		List<OrderInput> orders = List.of(aliasOrder, lastNameOrder);
+		List<OrderInput> orders = List.of(notesOrder, qualificationsOrder);
 		SortInput sort = SortInput.builder().withOrders(orders).build();
 		PageableInput pageSort = PageableInput.builder().withSort(sort).build();
 
-		// 8: Alison Heath (null) / NOTES #8 (FILTERED), 7: Beth Gibson (t) / Notes #7 (FILTERED),
-		// 5: Desmond Edwards (v) / Notes #5 (filtered)
-		// 8, 7, 5
-		List<Person> expected = subList(PERSONS, 8, 7, 5);
+		// null/"PERSON THREE", null/"Person six", "Notes #1"/"PERSON ONE", "Notes #2"/"Person two",
+		// "Notes #4"/"Person four", "Notes #5 (filtered)"/"PERSON FIVE", "Notes #7 (filtered)"/"PERSON SEVEN",
+		// "Notes #8 (filtered)"/"Person eight", "Updated test notes"/"Updated test title"
+		// 3, 6, 1, 2, 4, 5, 7, 8
+		List<Person> expected = subList(persons, 3, 6, 1, 2, 4, 5, 7, 8);
 		PersonPage actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		lastNameOrder.setDirection(DirectionKind.ASC);
+		qualificationsOrder.setDirection(DirectionKind.ASC);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		aliasOrder.setDirection(DirectionKind.DESC);
-		expected = subList(PERSONS, 8, 5, 7);
+		qualificationsOrder.setDirection(DirectionKind.DESC);
+		expected = subList(persons, 6, 3, 1, 2, 4, 5, 7, 8);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		// 7: Beth Gibson (t) / Notes #7 (FILTERED), 5: Desmond Edwards (v) / Notes #5 (filtered),
-		// 8: Alison Heath (null) / NOTES #8 (FILTERED)
-		// 7, 5, 8
-		aliasOrder.setNullHandling(NullHandlingKind.NULLS_LAST);
-		aliasOrder.setDirection(DirectionKind.ASC);
-		expected = subList(PERSONS,  7, 5, 8);
+		// "Notes #1"/"PERSON ONE", "Notes #2"/"Person two", "Notes #4"/"Person four", "Notes #5 (filtered)"/"PERSON FIVE",
+		// "Notes #7 (filtered)"/"PERSON SEVEN", "Notes #8 (filtered)"/"Person eight", null/"PERSON THREE", null/"Person six"
+		// 1, 2, 4, 5, 7, 8, 3, 6
+		notesOrder.setNullHandling(NullHandlingKind.NULLS_LAST);
+		qualificationsOrder.setDirection(DirectionKind.ASC);
+		expected = subList(persons, 1, 2, 4, 5, 7, 8, 3, 6);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 
-		aliasOrder.setDirection(DirectionKind.DESC);
-		expected = subList(PERSONS, 5, 7, 8);
+		qualificationsOrder.setDirection(DirectionKind.DESC);
+		expected = subList(persons, 1, 2, 4, 5, 7, 8, 6, 3);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, expected.size(), 1, expected.size(), 0, false, false, true, true, expected, true);
 	}
@@ -545,18 +561,18 @@ class PersonTests extends TopicalEntityTests<Person> {
 			.withPageSize(4) //
 			.build();
 		PersonPage actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		List<Person> expected = PERSONS.subList(0, 4);
-		checkPage(actuals, PERSONS.size(), 3, 4, 0, false, true, true, false, expected, true);
+		List<Person> expected = persons.subList(0, 4);
+		checkPage(actuals, persons.size(), 3, 4, 0, false, true, true, false, expected, true);
 
 		pageSort.setPageNumber(1);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		expected = PERSONS.subList(4, 8);
-		checkPage(actuals, PERSONS.size(), 3, 4, 1, true, true, false, false, expected, true);
+		expected = persons.subList(4, 8);
+		checkPage(actuals, persons.size(), 3, 4, 1, true, true, false, false, expected, true);
 
 		pageSort.setPageNumber(2);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		expected = PERSONS.subList(8, 9);
-		checkPage(actuals, PERSONS.size(), 3, 4, 2, true, false, false, true, expected, true);
+		expected = persons.subList(8, 9);
+		checkPage(actuals, persons.size(), 3, 4, 2, true, false, false, true, expected, true);
 	}	
 
 	@Test
@@ -576,12 +592,12 @@ class PersonTests extends TopicalEntityTests<Person> {
 		// order, so we have to fetch all pages before checking content.
 		// 5: Desmond Edwards (v) / Notes #5 (filtered), 7: Beth Gibson (t) / Notes #7 (FILTERED),
 		// 8: Alison Heath (null) / NOTES #8 (FILTERED)
-		List<Person> expected = subList(PERSONS, 5, 7);
+		List<Person> expected = subList(persons, 5, 7);
 		PersonPage actual = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actual, 3, 2, 2, 0, false, true, true, false, expected, false);
 		
 		pageSort.setPageNumber(1);
-		expected = subList(PERSONS, 8);
+		expected = subList(persons, 8);
 		actual = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actual, 3, 2, 2, 1, true, false, false, true, expected, false);
 	}
@@ -591,10 +607,10 @@ class PersonTests extends TopicalEntityTests<Person> {
 	@EnabledIf("io.github.demonfiddler.ee.client.PersonTests#hasExpectedPersons")
 	void readPersonsPagedSorted() throws GraphQLRequestPreparationException , GraphQLRequestExecutionException {
 		String responseSpec = PAGED_RESPONSE_SPEC.formatted("");
-		OrderInput firstNameOrder = OrderInput.builder() //
-			.withProperty("firstName") //
+		OrderInput order = OrderInput.builder() //
+			.withProperty("qualifications") //
 			.build();
-		List<OrderInput> orders = Collections.singletonList(firstNameOrder);
+		List<OrderInput> orders = Collections.singletonList(order);
 		SortInput sort = SortInput.builder().withOrders(orders).build();
 		PageableInput pageSort = PageableInput.builder() //
 			.withSort(sort) //
@@ -602,54 +618,54 @@ class PersonTests extends TopicalEntityTests<Person> {
 			.withPageSize(4) //
 			.build();
 
-		// 8: Alison Heath (null), 7: Beth Gibson (t), 6: Charles Farquhar (null), 5: Desmond Edwards (v),
-		// 4: Eric Douglas (null), 3: Fiona Charlton (X), 2: Gary Bosworth (null), 1: Heidi Andrews (Z),
-		// 0: Joanne Smythe (Smutt)
-		List<Person> expected = subList(PERSONS, 8, 7, 6, 5);
+		// "PERSON FIVE", "PERSON ONE", "PERSON SEVEN", "PERSON THREE", "Person eight", "Person four", "Person six",
+		// "Person two", "Updated test title"
+		// 5, 1, 7, 3, 8, 4, 6, 2, 0
+		List<Person> expected = subList(persons, 5, 1, 7, 3);
 		PersonPage actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 0, false, true, true, false, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 0, false, true, true, false, expected, true);
 
 		pageSort.setPageNumber(1);
-		expected = subList(PERSONS, 4, 3, 2, 1);
+		expected = subList(persons, 8, 4, 6, 2);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 1, true, true, false, false, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 1, true, true, false, false, expected, true);
 
 		pageSort.setPageNumber(2);
-		expected = subList(PERSONS, 0);
+		expected = subList(persons, 0);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 2, true, false, false, true, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 2, true, false, false, true, expected, true);
 
-		firstNameOrder.setDirection(DirectionKind.ASC);
+		order.setDirection(DirectionKind.ASC);
 		pageSort.setPageNumber(0);
-		expected = subList(PERSONS, 8, 7, 6, 5);
+		expected = subList(persons, 5, 1, 7, 3);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 0, false, true, true, false, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 0, false, true, true, false, expected, true);
 
 		pageSort.setPageNumber(1);
-		expected = subList(PERSONS, 4, 3, 2, 1);
+		expected = subList(persons, 8, 4, 6, 2);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 1, true, true, false, false, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 1, true, true, false, false, expected, true);
 
 		pageSort.setPageNumber(2);
-		expected = subList(PERSONS, 0);
+		expected = subList(persons, 0);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 2, true, false, false, true, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 2, true, false, false, true, expected, true);
 
-		firstNameOrder.setDirection(DirectionKind.DESC);
+		order.setDirection(DirectionKind.DESC);
 		pageSort.setPageNumber(0);
-		expected = subList(PERSONS, 0, 1, 2, 3);
+		expected = subList(persons, 0, 2, 6, 4);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 0, false, true, true, false, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 0, false, true, true, false, expected, true);
 
 		pageSort.setPageNumber(1);
-		expected = subList(PERSONS, 4, 5, 6, 7);
+		expected = subList(persons, 8, 3, 7, 1);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 1, true, true, false, false, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 1, true, true, false, false, expected, true);
 
 		pageSort.setPageNumber(2);
-		expected = subList(PERSONS, 8);
+		expected = subList(persons, 5);
 		actuals = queryExecutor.persons(responseSpec, null, pageSort);
-		checkPage(actuals, PERSONS.size(), 3, 4, 2, true, false, false, true, expected, true);
+		checkPage(actuals, persons.size(), 3, 4, 2, true, false, false, true, expected, true);
 	}
 
 	@Test
@@ -660,10 +676,10 @@ class PersonTests extends TopicalEntityTests<Person> {
 		TopicalEntityQueryFilter filter = TopicalEntityQueryFilter.builder() //
 			.withText("filtered") //
 			.build();
-		OrderInput firstNameOrder = OrderInput.builder() //
-			.withProperty("firstName") //
+		OrderInput order = OrderInput.builder() //
+			.withProperty("qualifications") //
 			.build();
-		List<OrderInput> orders = Collections.singletonList(firstNameOrder);
+		List<OrderInput> orders = Collections.singletonList(order);
 		SortInput sort = SortInput.builder().withOrders(orders).build();
 		PageableInput pageSort = PageableInput.builder() //
 			.withSort(sort) //
@@ -671,37 +687,36 @@ class PersonTests extends TopicalEntityTests<Person> {
 			.withPageSize(2) //
 			.build();
 
-		// 8: Alison Heath (null) / NOTES #8 (FILTERED), 7: Beth Gibson (t) / Notes #7 (FILTERED),
-		// 5: Desmond Edwards (v) / Notes #5 (filtered)
-		// 8, 7, 5
-		List<Person> expected = subList(PERSONS, 8, 7);
+		// "PERSON FIVE", "PERSON SEVEN", "Person eight"
+		// 5, 7, 8
+		List<Person> expected = subList(persons, 5, 7);
 		PersonPage actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, 3, 2, 2, 0, false, true, true, false, expected, true);
 
 		pageSort.setPageNumber(1);
-		expected = subList(PERSONS, 5);
+		expected = subList(persons, 8);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, 3, 2, 2, 1, true, false, false, true, expected, true);
 
-		firstNameOrder.setDirection(DirectionKind.ASC);
+		order.setDirection(DirectionKind.ASC);
 		pageSort.setPageNumber(0);
-		expected = subList(PERSONS, 8, 7);
+		expected = subList(persons, 5, 7);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, 3, 2, 2, 0, false, true, true, false, expected, true);
 
 		pageSort.setPageNumber(1);
-		expected = subList(PERSONS, 5);
+		expected = subList(persons, 8);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, 3, 2, 2, 1, true, false, false, true, expected, true);
 
-		firstNameOrder.setDirection(DirectionKind.DESC);
+		order.setDirection(DirectionKind.DESC);
 		pageSort.setPageNumber(0);
-		expected = subList(PERSONS, 5, 7);
+		expected = subList(persons, 8, 7);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, 3, 2, 2, 0, false, true, true, false, expected, true);
 
 		pageSort.setPageNumber(1);
-		expected = subList(PERSONS, 8);
+		expected = subList(persons, 5);
 		actuals = queryExecutor.persons(responseSpec, filter, pageSort);
 		checkPage(actuals, 3, 2, 2, 1, true, false, false, true, expected, true);
 	}
